--- a/Specified.conf
+++ b/Specified.conf
@@ -3,4 +3,4 @@
 DOMAIN-SUFFIX,adguard.com,DIRECT
 
 # > Jav
-DOMAIN-SUFFIX,javlibrary.com,Proxy ⚠️某些节点禁止访问，须指定其他可用节点(不禁止就选Proxy)
+DOMAIN-SUFFIX,javlibrary.com,⚠️指定可访问节点(不禁止就默认PROXY)
