--- a/Specified.conf
+++ b/Specified.conf
@@ -1,6 +1,6 @@
 [TCP]
 # > Adguard
-DOMAIN-SUFFIX,adguard.com,DIRECT
+DOMAIN-SUFFIX,adguard.com,DIRECT AdGuard官网
 
 # > Jav
-DOMAIN-SUFFIX,javlibrary.com,⚠️指定可访问节点(不禁止就默认PROXY)
+DOMAIN-SUFFIX,javlibrary.com,⚠️Javlibrary(节点不禁止访问就默认PROXY)
