--- a/Specified.conf
+++ b/Specified.conf
@@ -1,6 +1,6 @@
 [TCP]
 # > Adguard
-DOMAIN-SUFFIX,adguard.com,DIRECT AdGuard官网
+DOMAIN-SUFFIX,adguard.com,DIRECT AdGuard
 
-# > Jav
-DOMAIN-SUFFIX,javlibrary.com,⚠️Javlibrary(节点不禁止访问就默认PROXY)
+# > JavLibrary
+DOMAIN-SUFFIX,javlibrary.com,⚠️JavLibrary(节点不禁止访问就默认)
