--- a/Specified.conf
+++ b/Specified.conf
@@ -1,3 +1,6 @@
 [TCP]
+# > AdGuard
+DOMAIN-SUFFIX,adguard.com,ADGUARD(默认DIRECT)
+
 # > JavLibrary
-DOMAIN-SUFFIX,javlibrary.com,⚠️JavLibrary(节点不禁止访问就默认)
+DOMAIN-SUFFIX,javlibrary.com,⚠️JAVLIBRARY(节点不禁止访问就默认PROXY)
