--- a/Specified.conf
+++ b/Specified.conf
@@ -1,6 +1,7 @@
 [TCP]
 # > AdGuard
-DOMAIN-SUFFIX,adguard.com,ADGUARD(默认DIRECT)
+DOMAIN-SUFFIX,adguard.com,DIRECT
 
-# > JavLibrary
-DOMAIN-SUFFIX,javlibrary.com,⚠️JAVLIBRARY(节点不禁止访问就默认PROXY)
+# > Jav
+DOMAIN-SUFFIX,javlibrary.com,⚠️指定未禁JavLibrary节点（没有就默认)
+DOMAIN-SUFFIX,javbus.com,⚠️指定未禁JavBus节点（没有就默认)
