--- a/Specified.conf
+++ b/Specified.conf
@@ -2,6 +2,9 @@
 # > AdGuard
 DOMAIN-SUFFIX,adguard.com,DIRECT
 
+# > 1Password
+DOMAIN-SUFFIX,1password.com,DIRECT
+
 # > Jav
 DOMAIN-SUFFIX,javlibrary.com,⚠️指定未禁JavLibrary节点（没有就默认)
 DOMAIN-SUFFIX,javbus.com,⚠️指定未禁JavBus节点（没有就默认)
