--- a/Specified.conf
+++ b/Specified.conf
@@ -4,6 +4,7 @@ DOMAIN-SUFFIX,adguard.com,DIRECT
 
 # > 1Password
 DOMAIN-SUFFIX,1password.com,DIRECT
+DOMAIN-SUFFIX,1passwordusercontent.com,DIRECT
 
 # > Jav
 DOMAIN-SUFFIX,javlibrary.com,⚠️指定未禁JavLibrary节点（没有就默认)
